--- a/src/index.html
+++ b/src/index.html
@@ -20,21 +20,27 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page__body">
     <header class="header">
       <div class="top-bar">
-        <a href="/" class="top-bar__burger">
+        <a href="#menu" class="top-bar__burger">
           <img
             src="../src/images/icon/baseline-menu-24px.svg"
-            alt="/"
             class="top-bar__burger-logo"
+            alt="icon-burger"
           >
         </a>
-        <p class="top-bar__base-logo">NA<br>MU</p>
+        <a href="#" id="#">
+          <img
+            src="images/icon/NA MU (1).svg"
+            alt="base logo"
+            class="top-bar__base-logo"
+          >
+        </a>
       </div>
 
       <div class="botton-bar">
-        <p class="botton-bar__title">ХУДОЖНІЙ МУЗЕЙ</p>
+        <p class="botton-bar__title">ХУДОЖНІЙ<br>МУЗЕЙ</p>
 
         <div class="botton-bar__ticket">
           <div class="botton-bar__ticket-hd">
@@ -50,6 +56,105 @@
         </div>
       </div>
     </header>
+
+    <aside class="menu page__menu" id="menu">
+      <a href="#" class="top-bar__burger">
+        <img
+          src="../src/images/icon/ri-close-fill.svg"
+          class="top-bar__burger-logo"
+          alt="icon-close"
+          >
+      </a>
+
+      <div class="menu__top">
+        <nav class="menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#Галерея">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#Про Нас">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#Контакти">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="menu__bottom">
+        <p class="menu__bottom__graf">Графік роботи</p>
+
+        <p class="menu__bottom__graf--day">
+          <span class="time">12:00 — 20:00</span> середа<br>
+          <span class="time">12:00 — 20:00</span> четвер<br>
+          <span class="time">12:00 — 20:00</span> п’ятниця<br>
+          <span class="time">11:00 — 19:00</span> субота<br>
+          <span class="time">11:00 — 19:00</span> неділя<br>
+        </p>
+
+        <p class="menu__bottom__graf--freeday">
+          <span class="time">Вихідні:</span> понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="events" id="#events">
+        <h2 class="events__title">
+          Актуальні події
+        </h2>
+
+        <article class="events__go">
+          <img
+            src="../src/images/aktual-1.jpeg"
+            alt="events__go"
+            class="events__img"
+          >
+
+          <div class="events__content">
+            <div class="events__data">
+              <p class="events__type">ВИСТАВКА</p>
+              <p class="events__time">26.08-29.11.2019</p>
+            </div>
+            <div class="events__headline">
+              <h3 class="events__headline__title">Йду і повертаюсь</h3>
+              <div class="events__headline__red-squer"></div>
+            </div>
+            <p class="events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="events__dreams">
+          <img
+            src="../src/images/aktual-2.jpeg"
+            alt="events__dreams"
+            class="events__img"
+          >
+
+          <div class="events__content">
+            <div class="events__data">
+              <p class="events__type">ВИСТАВКА</p>
+              <p class="events__time">26.08-29.11.2019</p>
+            </div>
+            <div class="events__headline">
+              <h3 class="events__headline__title">І спогади і мрії </h3>
+              <div class="events__headline__red-squer"></div>
+            </div>
+            <p class="events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
