--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,429 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page">
+    <header class="header" id="home">
+      <div class="header__image">
+        <img
+          class="header__museum"
+          src="./images/header/header-image-museum.png"
+          alt="museum"
+        >
+
+        <a href="#home" class="header__title">
+          <h2 class="header__title-top"> NA <br> MU </h2>
+        </a>
+      </div>
+
+      <div class="header__container">
+        <a class="header__menu-burger" href="#menu"></a>
+
+        <section class="header__section">
+          <h1 class="header__section-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="header__section-container">
+            <div class="header__section-button">
+              <a class="header__section-ticket" href="#contacts">КВИТКИ</a>
+            </div>
+
+            <div class="header__section-content">
+              <a href="#contacts" class="header__section-arrow">
+                <img
+                class="header__section--arrow-icon"
+                src="./images/arrow-right.png"
+                alt="arrow-right">
+              </a>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <a href="#footer" class="header__side-text">події</a>
+
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__header">
+          <a class="menu__icon" href="#home"></a>
+
+          <div class="menu__header-link">
+            <nav class="menu__nav">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#galery" class="menu__link">Галерея</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#about-us" class="menu__link">Про нас</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#events" class="menu__link">Виставки та подіїї</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="menu__bottom--border-container">
+          <div class="menu__bottom-border"></div>
+        </div>
+
+        <div class="menu__bottom">
+          <div class="menu__bottom--schedule-work">
+            <p class="menu__bottom-schedule">Графік роботи</p>
+
+            <ul class="menu__bottom--schedule-list">
+              <li class="menu__bottom--schedule-item">
+                12:00 - 20:00
+                <span class="menu-schedule-text">середа</span>
+              </li>
+
+              <li class="menu__bottom--schedule-item">
+                12:00 - 20:00
+                <span class="menu-schedule-text">четвер</span>
+              </li>
+
+              <li class="menu__bottom--schedule-item">
+                12:00 - 20:00
+                <span class="menu-schedule-text">п'ятниця</span>
+              </li>
+
+              <li class="menu__bottom--schedule-item">
+                11:00 - 19:00
+                <span class="menu-schedule-text">субота</span>
+              </li>
+
+              <li class="menu__bottom--schedule-item">
+                11:00 - 19:00
+                <span class="menu-schedule-text">неділя</span>
+              </li>
+            </ul>
+
+            <p class="menu__bottom-text">
+              Вихідні:
+              <span class="menu-schedule-text">понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="events" id="events">
+        <h1 class="events__title">Актуальні події</h1>
+
+        <div class="events__container">
+          <div class="events__content">
+            <img
+              src="/images/section-events/events-image1.png"
+              class="events__image"
+              alt="events"
+            >
+
+            <div class="events__bottom">
+              <div class="events__bottom-info">
+                <h3 class="events__bottom--info-title">ВИСТАВКА</h3>
+                <p class="events__bottom--info-date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="events__bottom-title">
+                <h2 class="events__bottom--title-text">Йду і повертаюсь</h2>
+                <div class="events__bottom--title-point"></div>
+              </div>
+
+              <p class="events__bottom-text">
+                Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__content">
+            <img
+              src="/images/section-events/events-image2.png"
+              class="events__image"
+              alt="events"
+            >
+
+            <div class="events__bottom">
+              <div class="events__bottom-info">
+                <h3 class="events__bottom--info-title">ВИСТАВКА</h3>
+                <p class="events__bottom--info-date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="events__bottom-title">
+                <h2 class="events__bottom--title-text">І спогади і мрії</h2>
+                <div class="events__bottom--title-point"></div>
+              </div>
+
+              <p class="events__bottom-text">
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці Тетяни Яблонської відкриває ретроспективну
+                ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="artistry">
+          <img
+            src="/images/section-events/events-image3.png"
+            class="artistry__image"
+            alt="artistry"
+          >
+
+          <div class="artistry__content">
+            <div class="artistry__info events__bottom-info">
+              <h3 class="artistry__info-title events__bottom--info-title">ЛЕКЦІЯ</h3>
+              <p class="artistry__info-date events__bottom--info-date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h2 class="artistry__info--bottom-title">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </section>
+
+      <section class="galery" id="galery">
+        <h1 class="galery__title">Галерея</h1>
+
+        <div class="galery__image">
+
+          <div class="galery__slide-1">
+            <img
+              src="/images/section-galery/slide-1.png"
+              class="galery__slide"
+              alt="gelery"
+            >
+          </div>
+
+          <div class="galery__slide-2">
+            <img
+              src="/images/section-galery/slide-2.png"
+              class="galery__slide"
+              alt="gelery"
+            >
+          </div>
+
+          <div class="galery__slide-3">
+            <img
+              src="/images/section-galery/slide-3.png"
+              class="galery__slide"
+              alt="gelery"
+            >
+          </div>
+
+          <div class="galery__slide-4">
+            <img
+              src="/images/section-galery/slide-4.png"
+              class="galery__slide"
+              alt="gelery"
+            >
+          </div>
+        </div>
+
+        <input
+          type="radio"
+          name="slide"
+          id="slide1"
+          class="galery__slide-input"
+        >
+
+        <input
+          type="radio"
+          name="slide"
+          id="slide2"
+          class="galery__slide-input"
+        >
+
+        <input
+          type="radio"
+          name="slide"
+          id="slide3"
+          class="galery__slide-input"
+        >
+
+        <input
+          type="radio"
+          name="slide"
+          id="slide4"
+          class="galery__slide-input"
+        >
+      </section>
+
+      <section class="subscription" id="about-us">
+        <div class="subscription__container">
+          <div class="subscription__content">
+            <h1 class="subscription__title">Підписка</h1>
+            <p class="subscription__text">Бути В курсі всіх актуальних подій та останніх новин</p>
+          </div>
+
+          <form
+            class="subscription__form"
+            name="email"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              class="subscription__form-input"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button class="subscription__form-button">
+              <img
+                src="/images/arrow-right.png"
+                class="subscription__form--button-image"
+                alt="arrow"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="footer">
+      <div class="footer__container">
+        <div class="footer__content-title">
+          <a href="#home" class="footer__title">
+            <h2 class="footer__title-top"> NA <br> MU </h2>
+          </a>
+
+          <div class="footer__socials">
+            <a href="https://www.facebook.com/" class="footer__socials-link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/facebook.png"
+                class="footer__image"
+                alt="facebook"
+              >
+            </a>
+
+            <a href="https://www.instagram.com" class="footer__socials-link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/instagram.png"
+                class="footer__image"
+                alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__content" id="contacts">
+          <div class="footer__schedule-work">
+            <p class="footer__schedule">Графік роботи</p>
+
+            <ul class="footer__schedule-list">
+              <li class="footer__schedule-item">
+                12:00 - 20:00
+                <span class="footer__schedule-text">середа</span>
+              </li>
+
+              <li class="footer__schedule-item">
+                12:00 - 20:00
+                <span class="footer__schedule-text">четвер</span>
+              </li>
+
+              <li class="footer__schedule-item">
+                12:00 - 20:00
+                <span class="footer__schedule-text">п'ятниця</span>
+              </li>
+
+              <li class="footer__schedule-item">
+                11:00 - 19:00
+                <span class="footer__schedule-text">субота</span>
+              </li>
+
+              <li class="footer__schedule-item">
+                11:00 - 19:00
+                <span class="footer__schedule-text">неділя</span>
+              </li>
+            </ul>
+
+            <p class="footer__bottom-text">
+              Вихідні:
+              <span class="footer__schedule-text">понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </span>
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__contacts-text">Контакти:</p>
+
+            <ul class="footer__contacts-list">
+              <li class="footer__contacts-item">
+                <a
+                href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4490947,30.5289461,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+                target="_blank"
+                class="footer__contacts-link"
+                >
+                  вул. М.Грушевського,6;Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="tel:+38 (044) 278-74-54" class="footer__contacts-link">тел. +38 (044) 278-74-54</a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="tel:+38 (044) 278-74-54" class="footer__contacts-link">факс +38 (044) 278-74-54</a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">e-mail:info@namu.kiev.ua</a>
+              </li>
+            </ul>
+          </div>
+
+          <a href="#home" class="footer__arrow"></a>
+          <div class="footer__border"></div>
+
+          <div class="footer__bottom">
+            <ul class="footer__bottom-list">
+              <li class="footer__bottom-item">
+                <a href="#galery" class="footer__bottom-link">Галерея</a>
+              </li>
+
+              <li class="footer__bottom-item">
+                <a href="#about-us" class="footer__bottom-link">Про нас</a>
+              </li>
+
+              <li class="footer__bottom-item">
+                <a href="#events" class="footer__bottom-link">Виставки та подіїї</a>
+              </li>
+
+              <li class="footer__bottom-item">
+                <a href="#contacts" class="footer__bottom-link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright--text-author">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright--text-copy">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
