--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,343 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU MUSEUM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="./images/icons/logo.svg"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top-container">
+        <div class="header__top">
+          <a href="#menu" class="icon icon--menu-burger"></a>
+          <a href="#">
+            <img src="./images/icons/logo.svg" alt="namu logo">
+          </a>
+        </div>
+      </div>
+      <div class="header__bot">
+        <h1 class="title title--size-xl header__title">художній музей</h1>
+        <div class="header__links">
+          <a href="#events" class="header__link header__link--side">події</a>
+          <a href="#events" class="header__link header__link--main">квитки</a>
+        </div>
+      </div>
+    </header>
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__left">
+          <a href="#" class="icon menu__icon icon--menu-close"></a>
+          <nav class="nav menu__nav">
+            <ul class="nav__list menu__nav-list">
+              <li class="nav__list-item"><a href="#gallery" class="nav__list-link">Галерея</a></li>
+              <li class="nav__list-item"><a href="#subscribe" class="nav__list-link">Про Нас</a></li>
+              <li class="nav__list-item"><a href="#events" class="nav__list-link">Виставки та події</a></li>
+              <li class="nav__list-item"><a href="#footer" class="nav__list-link">Контакти</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="schedule menu__right">
+          <p class="schedule__title">Графік роботи</p>
+          <div class="schedule__container">
+            <ul class="schedule__working-days">
+              <li><p><span class="schedule--text-bold">12:00 — 20:00</span> середа</p></li>
+              <li><p><span class="schedule--text-bold">12:00 — 20:00</span> четвер</p> </li>
+              <li><p><span class="schedule--text-bold">12:00 — 20:00</span> п’ятниця</p></li>
+              <li><p><span class="schedule--text-bold">11:00 — 19:00</span> субота</p></li>
+              <li><p><span class="schedule--text-bold">11:00 — 19:00</span> неділя</p></li>
+            </ul>
+            <div class="schedule__day-offs">
+              <p><span class="schedule--text-bold">Вихідні:</span> понеділок, вівторок</p>
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main class="page__main">
+      <section class="page__section events" id="events">
+        <h2 class="title title--size-l">Актуальні події</h2>
+        <div class="events__cards">
+          <article class="events__card-exhibition">
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="./images/events/desktop/landscape.png"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="./images/events/tablet/landscape.png"
+              >
+              <img
+                src="./images/events/mobile/landscape.png"
+                alt="landscape picturing 2 trees, mountains, and sea"
+                class="events__image events__image--exhibition"
+              >
+            </picture>
+            <div class="events__card-description">
+              <div class="events__card-description-top">
+                <p class="events__type">Виставка</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="title title--size-m events__card-title events__card-title--exhibition">Йду і повертаюсь</h3>
+              <p class="events__card-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </article>
+          <article class="events__card-exhibition">
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="./images/events/desktop/woman.png"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="./images/events/tablet/woman.png"
+              >
+              <img
+                src="./images/events/mobile/woman.png"
+                alt="painting of a woman and a peacock"
+                class="events__image events__image--exhibition"
+              >
+            </picture>
+            <div class="events__card-description">
+              <div class="events__card-description-top">
+                <p class="events__type">Виставка</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="title title--size-m events__card-title events__card-title--exhibition">І спогади і мрії</h3>
+              <p class="events__card-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </article>
+          <article class="events__card-lecture">
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="./images/events/desktop/sunset.png"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="./images/events/tablet/sunset.png"
+              >
+              <img
+                src="./images/events/mobile/sunset.png"
+                alt="painting of a sunset"
+                class="events__image events__image--lecture"
+              >
+            </picture>
+            <div class="events__card-description events__card-description--lecture">
+              <div class="events__card-description-top events__card-description-top--lecture">
+                <p class="events__type">Лекція</p>
+                <p class="events__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="title title--size-m events__card-title events__card-title--lecture">Від класицизму до романтизму</h3>
+            </div>
+          </article>
+        </div>
+      </section>
+      <section class="page__section page__section--gallery gallery carousel" id="gallery">
+        <h2 class="title title--size-l">Галерея</h2>
+        <div class="gallery__inputs carousel__inputs">
+          <input
+            type="radio"
+            name="slides"
+            id="slide-1"
+            checked="checked"
+            class="carousel__input"
+          >
+          <input
+            type="radio"
+            name="slides"
+            id="slide-2"
+            class="carousel__input"
+          >
+          <input
+            type="radio"
+            name="slides"
+            id="slide-3"
+            class="carousel__input"
+          >
+          <input
+            type="radio"
+            name="slides"
+            id="slide-4"
+            class="carousel__input"
+          >
+
+          <ul class="gallery__images carousel__items">
+            <li class="carousel__item">
+              <picture class="gallery__picture">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/gallery1.png"
+                >
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/gallery/tablet/gallery1.png"
+                >
+                <img
+                  src="./images/gallery/mobile/gallery1.png"
+                  alt="painting of a sunset"
+                  class="gallery__image"
+                >
+              </picture>
+            </li>
+            <li class="carousel__item">
+              <picture class="gallery__picture">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/gallery2.png"
+                >
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/gallery/tablet/gallery2.png"
+                >
+                <img
+                  src="./images/gallery/mobile/gallery2.png"
+                  alt="painting of a sunset"
+                  class="gallery__image"
+                >
+              </picture>
+            </li>
+            <li class="carousel__item">
+              <picture class="gallery__picture">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/gallery3.png"
+                >
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/gallery/tablet/gallery3.png"
+                >
+                <img
+                  src="./images/gallery/mobile/gallery3.png"
+                  alt="painting of a sunset"
+                  class="gallery__image"
+                >
+              </picture>
+            </li>
+            <li class="carousel__item">
+              <picture class="gallery__picture">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/gallery4.png"
+                >
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/gallery/tablet/gallery4.png"
+                >
+                <img
+                  src="./images/gallery/mobile/gallery4.png"
+                  alt="painting of a sunset"
+                  class="gallery__image"
+                >
+              </picture>
+            </li>
+          </ul>
+
+          <div class="gallery__controls carousel__controls">
+            <label for="slide-1" class="carousel__control"></label>
+            <label for="slide-2" class="carousel__control"></label>
+            <label for="slide-3" class="carousel__control"></label>
+            <label for="slide-4" class="carousel__control"></label>
+          </div>
+        </div>
+      </section>
+      <section class="page__section page__section--subscribe subscribe" id="subscribe">
+        <div class="subscribe__container">
+          <h3 class="title title--size-l subscribe__title">Підписка</h3>
+          <p class="subscribe__sub-title">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="#" class="subscribe__form">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscribe__input"
+              required
+            >
+            <button type="submit" class="subscribe__button"></button>
+          </form>
+        </div>
+      </section>
+      <footer class="footer" id="footer">
+        <div class="footer__container">
+          <div class="footer__logos">
+            <a href="#">
+              <img src="./images/icons/logo.svg" alt="namu logo">
+            </a>
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                target="_blank"
+                class="icon icon--facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                class="icon icon--instagram"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__container-right">
+            <div class="footer__top">
+              <div class="footer__schedule">
+                <p class="schedule__title">Графік роботи</p>
+                <div class="schedule__container footer__schedule-container">
+                  <ul class="schedule__working-days">
+                    <li><p><span class="schedule--text-bold">12:00 — 20:00</span> середа</p></li>
+                    <li><p><span class="schedule--text-bold">12:00 — 20:00</span> четвер</p> </li>
+                    <li><p><span class="schedule--text-bold">12:00 — 20:00</span> п’ятниця</p></li>
+                    <li><p><span class="schedule--text-bold">11:00 — 19:00</span> субота</p></li>
+                    <li><p><span class="schedule--text-bold">11:00 — 19:00</span> неділя</p></li>
+                  </ul>
+                  <div class="schedule__day-offs">
+                    <p>Вихідні понеділок, вівторок</p>
+                    <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer__contacts">
+                <p class="footer__contacts-title">Контакти:</p>
+                <ul class="footer__contacts-list">
+                  <li>
+                    <a
+                      href="https://maps.app.goo.gl/ySHjNhX8Ny2CpT1n8"
+                      class="footer__link"
+                      target="_blank"
+                    >вул. М. Грушевського, 6; Київ, 01001</a>
+                  </li>
+                  <li><a href="tel:+380442781357" class="footer__link">тел. +38 (044) 278-13-57</a></li>
+                  <li> <a href="#" class="footer__link">факс +38 (044) 278-74-54</a></li>
+                  <li><a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu.kiev.ua</a></li>
+                </ul>
+              </div>
+              <a href="#" class="footer__back-to-top"></a>
+            </div>
+
+            <nav class="nav footer__nav">
+              <ul class="nav__list footer__nav-list">
+                <li class="nav__list-item footer__nav-item"><a href="#gallery" class="nav__list-link">Галерея</a></li>
+                <li class="nav__list-item footer__nav-item"><a href="#subscribe" class="nav__list-link">Про Нас</a></li>
+                <li class="nav__list-item footer__nav-item"><a href="#events" class="nav__list-link">Виставки та події</a></li>
+                <li class="nav__list-item footer__nav-item"><a href="#footer" class="nav__list-link">Контакти</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </footer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
